fixes white space on gallery

--- a/css/gallery.css
+++ b/css/gallery.css
@@ -131,5 +131,5 @@ img.hover-shadow {
 /*end*/
 
 .gallery {
-  min-height: 500px; 
+  margin-bottom: 35px; 
 }
